Further minor corrections and polish